new home detail responsive

--- a/src/sass/essential/breakpoints/_1200.scss
+++ b/src/sass/essential/breakpoints/_1200.scss
@@ -74,4 +74,10 @@
             }
         }
     }
+
+    .section-features-image{
+        &--content-wrap{
+            padding: 50px;
+        }
+    }
 }
