--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -184,4 +184,12 @@
             }
         }
     }
+
+    .section-features-image{
+        &--image{
+            padding-top: 15px;
+            margin-left: -15px;
+            margin-right: -15px;
+        }
+    }
 }
