branch detail responsive

--- a/components/static-sections/properties.twig
+++ b/components/static-sections/properties.twig
@@ -18,7 +18,7 @@
                         {% for button in actions %}
 
                             {% if actions | length > 1 %}
-                                <div class="col-xl-5 {{ loop.first ? 'offset-xl-1' : '' }}">
+                                <div class="col-lg-5 col-md-6 mt-3 mt-md-0 {{ loop.first ? 'offset-lg-1' : '' }}">
                             {% else %}
                                 <div class="col-xl-2 offset-xl-5 col-md-4 offset-md-4">
                             {% endif %}
