--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -31,6 +31,15 @@
         padding-top: 119px;
     }
 
+    .section-page-top{
+        &.has-reviews-area{
+            .feefo-widget-wrap{
+                margin-left: 30px;
+                margin-right: 30px;
+            }
+        }
+    }
+
     .section-home-hero{
         &--image {
             img {
@@ -190,6 +199,19 @@
             padding-top: 15px;
             margin-left: -15px;
             margin-right: -15px;
+        }
+    }
+
+    .single-sa_branch{
+        .branch-contact-details{
+            &--contacts{
+                .contact-emails{
+                    .btn{
+                        padding: 10px 0.6rem;
+                        font-size: 14px;
+                    }
+                }
+            }
         }
     }
 }
