branch detail - mobile fix

--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -385,4 +385,12 @@
             display: block!important;
         }
     }
+
+    .single-sa_branch{
+        .branch-contact-details{
+            &--contacts{
+                display: block!important;
+            }
+        }
+    }
 }
