content page responsive

--- a/components/sections/content.twig
+++ b/components/sections/content.twig
@@ -6,12 +6,12 @@
                 {% if section.sidebar and section.cont_has_image != 1 %}
 
                     <div class="row">
-                        <div class="col-xl-7" data-aos="fade-down">
+                        <div class="col-md-7" data-aos="fade-down">
                             <div class="content-clear">
                                 {{ section.cont_editor_1 }}
                             </div>
                         </div>
-                        <div class="col-xl-4 offset-xl-1" data-aos="fade-up">
+                        <div class="col-lg-4 offset-lg-1 col-md-5 mt-5 mt-md-0" data-aos="fade-up">
                             <div class="section-content--sidebar">
                                 {{ section.sidebar }}
                             </div>
