content page alternative responsive

--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -378,4 +378,20 @@
             text-align: center;
         }
     }
+
+    .section-cta-text{
+        margin-left: -15px;
+        margin-right: -15px;
+
+        &--style{
+            h3{
+                font-size: 16px;
+                margin-bottom: 20px;
+            }
+        }
+
+        &--actions{
+            margin-top: 30px;
+        }
+    }
 }
