--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -214,4 +214,11 @@
             }
         }
     }
+
+    .section-cta-text{
+        &--style{
+            padding-left: 90px;
+            padding-right: 90px;
+        }
+    }
 }
