--- a/components/sections/content.twig
+++ b/components/sections/content.twig
@@ -21,12 +21,12 @@
                 {% elseif section.cont_has_image and section.cont_image %}
 
                     <div class="row">
-                        <div class="col-xl-5" data-aos="fade-down">
+                        <div class="col-md-5" data-aos="fade-down">
                             <div class="content-clear">
                                 {{ section.cont_editor_1 }}
                             </div>
                         </div>
-                        <div class="col-xl-6 offset-xl-1" data-aos="fade-up">
+                        <div class="col-md-6 offset-md-1 mt-4 mt-md-0" data-aos="fade-up">
                             <img src="{{ section.cont_image }}">
                         </div>
                     </div>
