thank you page responsive

--- a/components/sections/shortcode_form.twig
+++ b/components/sections/shortcode_form.twig
@@ -1,7 +1,7 @@
 <section class="page-section page-section--padding50 section-shortcode-form">
     <div class="container">
         <div class="row">
-            <div class="col-xl-6 offset-xl-3">
+            <div class="col-xl-6 offset-xl-3 col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                 <div class="section-shortcode-form--box">
                     {{ section.sf_shortcode | shortcodes }}
                 </div>
