--- a/src/sass/essential/breakpoints/_1200.scss
+++ b/src/sass/essential/breakpoints/_1200.scss
@@ -93,4 +93,11 @@
             padding: 50px;
         }
     }
+
+    .section-404-search-properties-form{
+        &--inner{
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+    }
 }
