--- a/templates/404.twig
+++ b/templates/404.twig
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-    <section class="section-404">
+    <section class="section-404 text-center text-md-left">
         <div class="container">
             <div class="row">
-                <div class="col-xl-5 offset-xl-1 content-clear">
+                <div class="col-lg-5 offset-lg-1 col-md-6 content-clear">
                     {{ options.section_404.content }}
                 </div>
-                <div class="col-xl-5 text-xl-right">
+                <div class="col-lg-5 col-md-6 text-md-right mt-4 mt-md-0">
                     <img src="{{ options.section_404.image }}">
                 </div>
             </div>
@@ -25,7 +25,7 @@
 
                             {% if options.section_404.property_search_title %}
 
-                                <div class="page-section--heading">
+                                <div class="page-section--heading text-center text-md-left">
                                     <h2>{{ options.section_404.property_search_title }}</h2>
                                 </div>
 
