--- a/src/sass/essential/sections/_404_search-properties.scss
+++ b/src/sass/essential/sections/_404_search-properties.scss
@@ -20,9 +20,7 @@
 
     .property-search-form{
         padding: 20px 30px;
-        margin-left: -30 px;
-        margin-right: -30px;
-        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
 
         .control-address_keyword,
         .control-property_type{
