--- a/templates/page-login.twig
+++ b/templates/page-login.twig
@@ -5,7 +5,7 @@
     <section class="page-section page-section--padding50 section-login-register">
         <div class="container">
             <div class="row">
-                <div class="col-xl-10 offset-xl-1">
+                <div class="col-lg-10 offset-lg-1 text-center text-lg-left">
                     <h1>{{ post.title }}</h1>
                 </div>
             </div>
@@ -14,13 +14,13 @@
         <div class="section-login-register--inner">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-5 offset-xl-1">
+                    <div class="offset-lg-1 col-lg-5">
                         <div class="section-login-register--login-box">
                             <h2>Homebuyers Sign In</h2>
                             {{ '[propertyhive_login_form]' | shortcodes }}
                         </div>
                     </div>
-                    <div class="col-xl-4 offset-xl-1">
+                    <div class="offset-lg-1 col-lg-4 mt-4 mt-lg-0">
                         <div class="section-login-register--register-cta">
                             <h2>Register</h2>
                             <div class="flex-grow-1">
@@ -39,8 +39,8 @@
     <section class="page-section page-section--padding50 section-portal-login">
         <div class="container-wide">
             <div class="row">
-                <div class="col-xl-5 offset-xl-1">
-                    <div class="section-portal-login--content">
+                <div class="col-xl-5 offset-xl-1 col-lg-6">
+                    <div class="section-portal-login--content text-center text-lg-left">
                         <h2 class="h1">Login to Your Portal</h2>
                         <ul>
                             <li>
@@ -60,7 +60,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6 pl-0 pr-0 pl-lg-3 pr-lg-3">
                     <img src="{{ post.thumbnail }}">
                 </div>
             </div>
