--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -221,4 +221,40 @@
             padding-right: 90px;
         }
     }
+
+    .section-login-register{
+        &--login-box{
+            margin: 0;
+
+            h2{
+                text-align: center;
+            }
+        }
+
+        &--register-cta{
+            background-color: $support-color5;
+            margin-left: -15px;
+            margin-right: -15px;
+            padding-left: 15px;
+            padding-right: 15px;
+            text-align: center;
+
+            .btn{
+                display: inline-block;
+                margin-top: 30px;
+            }
+        }
+
+        &--inner{
+            padding: 0;
+
+            &:before{
+                content: normal;
+            }
+        }
+    }
+
+    .section-portal-login{
+
+    }
 }
