register page responsive

--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -403,10 +403,12 @@
         &--box{
             padding: 20px;
 
+            .propertyhive-form,
             .wpcf7{
                 input[type="submit"] {
                     width: 100%;
                     display: block;
+                    max-width: 100%;
                 }
             }
         }
