--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -254,7 +254,7 @@
         }
     }
 
-    .section-portal-login{
-
+    #my-account-saved_searches{
+        grid-template-columns: 1fr;
     }
 }
